sumo/tests/netconvert/import/XML/errors/broken_edge/edge#shape__false1b/errors.netconvert
Error: Attribute 'shape' in definition of a edge is not all numeric position entries.
Quitting (on error).
